fixed a few dentation and spacing issues and fixed some minor stuff with the css code

--- a/css/stylus.css
+++ b/css/stylus.css
@@ -1,9 +1,19 @@
 img {
   display: block;
   margin: auto;
+  color: white
 }
 
 h1 {
   text-align: center;
   font-family: sans-serif;
+  color:  white
+}
+h2 {
+  text-align: center;
+  font-family: sans-serif;
+  color:  white
+}
+p {font-family: sans-serif;
+color:  white
 }
